--- a/main.scss
+++ b/main.scss
@@ -173,15 +173,15 @@ body {
 	opacity: 1;
 }
 
-#unicorn-btn {
+#astronaut-btn {
 	transition: transform 0.3s ease-in-out;
 }
 
-#unicorn-btn:hover {
+#astronaut-btn:hover {
 	transform: scale(1.8);
 }
 
-#unicorn-icon {
+#astronaut-icon {
 	margin-top: -80px;
 	margin-bottom: 20px;
 }
