--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 						<div class="container">
 							<div class="nav-left">
 								{% if page.url == '/' %}
-									<a id="unicorn-btn" class="nav-item" href="https://danielschorin.com/astronaut" title="Click me!">👨🏽‍🚀</a>
+									<a id="astronaut-btn" class="nav-item" href="https://danielschorin.com/astronaut" title="Click me!">👨🏽‍🚀</a>
 								{% else %}
 									<span class="nav-item">Daniel Schorin</span>
 								{% endif %}
@@ -69,8 +69,9 @@
 							<div class="nav-right nav-menu">
 								<a class="nav-item is-tab" href="{% link index.html %}">Home</a>
 								<a class="nav-item is-tab" href="{% link index.html %}#projects">Projects</a>
+								<a class="nav-item is-tab" href="{% link index.html %}#apps">Apps</a>
 								<a class="nav-item is-tab" href="danielschorin.com/about">About</a>
-		
+								//-->
 								<span class="nav-item">
 									<a class="button" href="{% link contact.md %}">Contact</a>
 								</span>
