--- a/main.scss
+++ b/main.scss
@@ -237,3 +237,12 @@ Generated with https://icomoon.io/app/
   content: "\e903";
   color: #1da1f2;
 }
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
