navigation bar update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 								<span></span>
 								<span></span>
 							</span>
-							<div class="nav-right nav-menu">
+							<div class="nav-right nav-menu is-active">
 								<a class="nav-item is-tab" href="{% link index.html %}">Home</a>
 								<a class="nav-item is-tab" href="{% link index.html %}#projects">Projects</a>
 								<a class="nav-item is-tab" href="danielschorin.com/about">About</a>
