--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
 		<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" sizes="32x32">
 		<link rel="stylesheet" href="{{ '/main.css' | relative_url }}">
 		<script src="https://use.fontawesome.com/473ea12f98.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<script src="https://use.fontawesome.com/794c5387fa.js"></script>
+		<link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="font-awesome/4.7.0/scss/font-awesome.scss">
 		<script defer src="{{ '/main.js' | relative_url }}"></script>
 
 		{% if page.url == '/' %}
@@ -81,6 +81,45 @@
 				</div>
 			</div>
 		</section>
+		<section id="contact">
+		   <div class="row section-intro">
+		     <div class="col-twelve">
+		       <h5>Contact</h5>
+		       <h1>I'd Love To Hear From You.</h1>
+		     </div>
+		   </div>
+		   	<div class="row contact-info">
+		   		<div class="col-four tab-full">
+		   			<div class="icon">
+		   				<i class="icon-pin"></i>
+		   			</div>
+		   			<h5>Where to find me</h5>
+		   			<p>
+		            Ann Arbor, Michigan
+		            </p>
+
+		   		</div>
+
+		   		<div class="col-four tab-full collapse">
+
+		   			<div class="icon">
+		   				<i class="icon-mail"></i>
+		   			</div>
+		   			<h5>Email Me</h5>
+		   			<p>djschorn@umich.edu<br>
+					   </p>
+		   		</div>
+		   		<div class="col-four tab-full">
+		   			<div class="icon">
+		   				<i class="icon-phone"></i>
+		   			</div>
+		   			<h5>Call Me At</h5>
+		   			<p>Phone: (734) 355 3625<br>
+					   </p>
+		   		</div>
+		   	</div> <!-- /contact-info -->
+		</section>
 		{{ content }}
+
 	</body>
 </html>
