--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="theme-color" content="#3273DC">
 		<meta name="author" content="Daniel Schorin">
@@ -81,44 +82,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="contact">
-		   <div class="row section-intro">
-		     <div class="col-twelve">
-		       <h5>Contact</h5>
-		       <h1>I'd Love To Hear From You.</h1>
-		     </div>
-		   </div>
-		   	<div class="row contact-info">
-		   		<div class="col-four tab-full">
-		   			<div class="icon">
-		   				<i class="icon-pin"></i>
-		   			</div>
-		   			<h5>Where to find me</h5>
-		   			<p>
-		            Ann Arbor, Michigan
-		            </p>
 
-		   		</div>
-
-		   		<div class="col-four tab-full collapse">
-
-		   			<div class="icon">
-		   				<i class="icon-mail"></i>
-		   			</div>
-		   			<h5>Email Me</h5>
-		   			<p>djschorn@umich.edu<br>
-					   </p>
-		   		</div>
-		   		<div class="col-four tab-full">
-		   			<div class="icon">
-		   				<i class="icon-phone"></i>
-		   			</div>
-		   			<h5>Call Me At</h5>
-		   			<p>Phone: (734) 355 3625<br>
-					   </p>
-		   		</div>
-		   	</div> <!-- /contact-info -->
-		</section>
 		{{ content }}
 
 	</body>
