--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,19 +62,21 @@
 									<span class="navbar-item">Daniel Schorin</span>
 								{% endif %}
 							</div>
-							<button class="button navbar-burger">
-								<span></span>
-								<span></span>
-								<span></span>
-							</button>
-							<div class="navbar-right navbar-menu is-active">
-								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
-								<a class="navbar-item is-tab" href="{% link index.html %}#projects">Projects</a>
-								<a class="navbar-item is-tab" href="danielschorin.com/about">About</a>
-						
-								<span class="navbar-item">
-									<a class="button" href="{% link contact.md %}">Contact</a>
-								</span>
+							<div class = "navbar-brand"> 
+								<button class="button navbar-burger">
+									<span></span>
+									<span></span>
+									<span></span>
+								</button>
+
+								<div class="navbar-right navbar-menu is-active">
+									<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
+									<a class="navbar-item is-tab" href="{% link index.html %}#projects">Projects</a>
+									<a class="navbar-item is-tab" href="{% link index.html %}#about">About</a>
+									<span class="navbar-item">
+										<a class="button" href="{% link contact.md %}">Contact</a>
+									</span>
+								</div>
 							</div>
 						</div>
 					</nav>
