--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,20 +63,22 @@
 								{% endif %}
 							</div>
 							<div class = "navbar-brand"> 
-								<button class="button navbar-burger">
-									<span></span>
-									<span></span>
-									<span></span>
-								</button>
+								
 
-								<div class="navbar-right navbar-menu is-active">
+								<div class="navbar-right navbar-menu">
 									<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
 									<a class="navbar-item is-tab" href="{% link index.html %}#projects">Projects</a>
 									<a class="navbar-item is-tab" href="{% link index.html %}#about">About</a>
 									<span class="navbar-item">
 										<a class="button" href="{% link contact.md %}">Contact</a>
 									</span>
+
 								</div>
+								<button class="button navbar-burger">
+									<span></span>
+									<span></span>
+									<span></span>
+								</button>
 							</div>
 						</div>
 					</nav>
