--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
 								</button>
 							</div>
 
-							<div class="navbar-right navbar-menu">
+							<div class="navbar-right navbar-menu is-active">
 								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
 								<a class="navbar-item is-tab" href="{% link index.html %}#projects">Projects</a>
 								<a class="navbar-item is-tab" href="{% link index.html %}#about">About</a>
