--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 		<section class="hero">
 			<div class="hero-head">
 				<div class="container">
-					<nav class="navbar has-shadow">
+					<nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
 						<div class="container">
 							<div class="navbar-left">
 								{% if page.url == '/' %}
@@ -62,22 +62,22 @@
 									<span class="navbar-item">Daniel Schorin</span>
 								{% endif %}
 							</div>
-							<div class = "navbar-brand"> 
-									<button class="button navbar-burger">
-									<span></span>
-									<span></span>
-									<span></span>
-								</button>
-							</div>
+						</div>
+						<div class = "navbar-brand"> 
+								<button class="button navbar-burger">
+								<span></span>
+								<span></span>
+								<span></span>
+							</button>
+						</div>
 
-							<div class="navbar-right navbar-menu is-active">
-								<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
-								<a class="navbar-item is-tab" href="{% link index.html %}#projects">Projects</a>
-								<a class="navbar-item is-tab" href="{% link index.html %}#about">About</a>
-								<span class="navbar-item">
-									<a class="button" href="{% link contact.md %}">Contact</a>
-								</span>
-							</div>
+						<div class="navbar-right navbar-menu is-active">
+							<a class="navbar-item is-tab" href="{% link index.html %}">Home</a>
+							<a class="navbar-item is-tab" href="{% link index.html %}#projects">Projects</a>
+							<a class="navbar-item is-tab" href="{% link index.html %}#about">About</a>
+							<span class="navbar-item">
+								<a class="button" href="{% link contact.md %}">Contact</a>
+							</span>
 						</div>
 					</nav>
 				</div>
