--- a/main.scss
+++ b/main.scss
@@ -47,7 +47,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
-.nav-left {
+.navbar-left {
 	overflow: hidden;
 }
 
