--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,11 @@
 		<meta name="twitter:creator" content="@danielschorin">
 		<meta name="x-build-time" content="{{ site.time | date_to_rfc822 }}">
 		<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
+		<link rel="stylesheet" type="font-awesome-4.7.0/css" href="font-awesome.css">
 		<link rel="alternate" type="application/rss+xml" title="Daniel Schorin's Blog" href="https://danielschorin.com/blog">
 		<link rel="preload" href="{{ '/font-awesome.woff' | relative_url }}" as="font" crossorigin>
 		<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" sizes="32x32">
 		<link rel="stylesheet" href="{{ '/main.css' | relative_url }}">
-		<script src="https://use.fontawesome.com/473ea12f98.js"></script>
-		<link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="font-awesome/4.7.0/scss/font-awesome.scss">
 		<script defer src="{{ '/main.js' | relative_url }}"></script>
 
 		{% if page.url == '/' %}
