--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,8 @@
 		<meta name="twitter:creator" content="@danielschorin">
 		<meta name="x-build-time" content="{{ site.time | date_to_rfc822 }}">
 		<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
+		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/scss/font-awesome.scss">
+
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
