--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
+		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 		<link rel="alternate" type="application/rss+xml" title="Daniel Schorin's Blog" href="https://danielschorin.com/blog">
 		<link rel="preload" href="{{ '/font-awesome.woff' | relative_url }}" as="font" crossorigin>
 		<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" sizes="32x32">
