--- a/main.scss
+++ b/main.scss
@@ -204,7 +204,7 @@ Generated with https://icomoon.io/app/
 */
 @font-face {
 	font-family: 'font-awesome';
-	src: url('font-awesome.woff') format('woff');
+	//src: url('font-awesome.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
