--- a/main.scss
+++ b/main.scss
@@ -6,7 +6,7 @@
 $primary: $blue;
 
 @import 'bulma';
-@import 'font-awesome-4.7.0/scss/font-awesome.scss';
+//@import 'font-awesome-4.7.0/scss/font-awesome.scss';
 
 
 
