--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 					<nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
 						<div class="navbar-left">
 							{% if page.url == '/' %}
-								<a id="astronaut-btn" class="navbar-item" href="https://danielschorin.com/astronaut" title="Click me!">👨🏽‍🚀</a>
+								<a id="astronaut-btn" class="navbar-item" href="#" onclick="sharkify_add();return false;"><img src="https://www.iamcal.com/sharkify/sharkify.gif" width="61" height="16" border="0" alt="Sharkify" /></a><script type="text/javascript" src="https://www.iamcal.com/sharkify/sharkify.js"></script> 
 							{% else %}
 								<span class="navbar-item">Daniel Schorin</span>
 							{% endif %}
